# apl-pruning-lab

./: .coverage  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  aggregation_complete.txt  pyproject.toml
apl_pruning/: __init__.py  ast_evaluator.py  castnet_bridge.py  exporter.py  layers.py  parser.py  scorers.py  tokenizer.py  tous_les_fichiers.py  utils.py
apl_pruning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: PRIMITIVES.md
domain/: ast_evaluator.py  cache.py  grammar.py  scorers.py  tokenizer.py
examples/: 04_per_neuron.py  06_batch_comparison.py  07_export_pytorch.py  08_layer_scorer.py  09_pruning_methods.py
infrastructure/: exporter.py
orchestration/examples/: 01_wanda.py  02_grad_weight.py  03_three_components.py  05_indexing.py  10_castnet_integration.py
tests/: test_exporter.py  test_layers.py  test_parser.py  test_robustness.py  test_scorers.py
