[project]
name = "apl-pruning"
version = "0.1.0"
description = "Minimal APL-like DSL for describing LLM pruning methods. Compiles to JAX."
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "torch",
]
